--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <body>
 
 <h1>My ECS Github Web Page</h1>
-<p>I love ECS!</p>
+<h2>ECS - Fall 2017 - P1</h2>
+<p1>I love ECS!</p1>
 
 </body>
 </html>
