--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <h2>ECS - Fall 2017 - P1</h2>
   
 <p1>I love ECS!</p1>
- <p2>a href="https://www.w3chools.com">This is a link</a>
+<a href="https://www.w3chools.com">This is a link</a>
 </body>
 </html>
