--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>My ECS Github Web Page</h1>
 <h2>ECS - Fall 2017 - P1</h2>
   
-<p1>I love ECS!</p1>
+<p1><br>I love ECS!<br></p1>
 
 <p2>This is<br>a paragraph<br>with line breaks.</p2>
   
