--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <h1>My ECS Github Web Page</h1>
 <h2>ECS - Fall 2017 - P1</h2>
   
-<p1><br>I love ECS!<br></p1>
-
-<p2>This is<br>a paragraph<br>with line breaks.</p2>
-  
+<p1>I love ECS!</p1>
+<br><br>
 <a href="https://www.w3chools.com">This is a link</a>
+<br><br>
+<p2>This is<br>a paragraph<br>with line breaks.</p2>
   
 </body>
 </html>
