--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
 <title>My ECS Github Page</title>
   
-<body>
+<body style="color:Beige;">
 
-<h1>My ECS Github Web Page</h1>
-<h2>ECS - Fall 2017 - P1</h2>
+<h1 style="color:Maroon;">My ECS Github Web Page</h1>
+<h2 style="color:Maroon;">ECS - Fall 2017 - P1</h2>
   
-<p1>I love ECS!</p1>
+<p1 style="color:Darkgoldenrod;">I love ECS!</p1>
 <br><br>
 <a href="https://www.w3chools.com">This is a link</a>
 <br><br>
-<p2>This is<br>a paragraph<br>with line breaks.</p2>
+<aref2="links.html">Link Exercises</a2>
+<br><br> 
+<p2 style="color:Darkgoldenrod;">This is<br>a paragraph<br>with line breaks.</p2>
   
 </body>
 </html>
