--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <br><br>
 <a href="https://www.w3chools.com">This is a link</a>
 <br><br>
-<aref="links.html">Link Exercises</a>
+<aref="exercises/links.html">Link Exercises</a>
 <br><br> 
 <p2 style="color:Darkgoldenrod;">This is<br>a paragraph<br>with line breaks.</p2>
   
