--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <h1 style="color:Maroon;">My ECS Github Web Page</h1>
 <h2 style="color:Maroon;">ECS - Fall 2017 - P1</h2>
   
-<p1 style="color:Darkgoldenrod;">I love ECS!</p1>
+<p1 style="color:Goldenrod;">I love ECS!</p1>
 <br><br>
-<a href="https://www.w3chools.com">This is a link</a>
+<a hrefstyle="color:Goldenrod;">="https://www.w3chools.com">This is a link</a>
 <br><br>
 <aref="exercises/links.html">Link Exercises</a>
 <br><br> 
