--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   
 <body style="color:Beige;">
 
+<img src="https://goo.gl/jcdXn2">
+  
 <h1 style="color:Maroon;">My ECS Github Web Page</h1>
 <h2 style="color:Maroon;">ECS - Fall 2017 - P1</h2>
   
-<p1 style="color:Goldenrod;">I love ECS!</p1>
+<p1 style="color:Darkgoldenrod;">I love ECS!</p1>
 <br><br>
 <aref style="color:Darkgoldenrod;">="https://www.w3chools.com">This is a link</a>
 <br><br>
 <aref style="color:Darkgoldenrod;">="exercises/links.html">=Link Exercises</a>
 <br><br> 
 <p2 style="color:Darkgoldenrod;">This is<br>a paragraph<br>with line breaks.</p2>
-
-<img src="https://goo.gl/jcdXn2">
   
 </body>
 </html>
