--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   
 <p1 style="color:Darkgoldenrod;">I love ECS!</p1>
 <br><br>
-<aref style="color:Darkgoldenrod;">"https://www.w3chools.com">This is a link</a>
+<aref style="color:Darkgoldenrod;">"https://www.w3chools.com"> This is a link</a>
 <br><br>
-<aref style="color:Darkgoldenrod;">"exercises/links.html">=Link Exercises</a>
+<aref style="color:Darkgoldenrod;">"exercises/links.html"> Link Exercises</a>
 <br><br> 
 <p2 style="color:Darkgoldenrod;">This is<br>a paragraph<br>with line breaks.</p2>
   
