--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 
 <img src="https://goo.gl/jcdXn2">
   
-<h1 style="color:Maroon;">My ECS Github Web Page</h1>
-<h2 style="color:Maroon;">ECS - Fall 2017 - P1</h2>
+<h1 style="color:Darkmagenta;">My ECS Github Web Page</h1>
+<h2 style="color:Darkmagenta;">ECS - Fall 2017 - P1</h2>
   
-<p1 style="color:Darkmagenta;">I love ECS!</p1>
+<p1 style="color:Chocolate;">I love ECS!</p1>
 <br><br>
-<aref style="color:Cadetblue;">"https://www.w3chools.com"> This is a link</a>
+<aref style="color:Maroon;">"https://www.w3chools.com"> This is a link</a>
 <br><br>
 <aref style="color:Cadetblue;">"exercises/links.html"> Link Exercises</a>
 <br><br> 
-<p2 style="color:Chocolate;">This is<br>a paragraph<br>with line breaks.</p2>
+<p2 style="color:Saddlebrown;">This is<br>a paragraph<br>with line breaks.</p2>
   
 </body>
 </html>
