--- a/exercises/links.html
+++ b/exercises/links.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Links Exercises</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Links Exercises</h1>
 <p>This is a paragraph.</p>
 <a href="index.html">
   <img src="images/home.png" alt="Exercises Home"
