--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Index</title>
+<title>Index Exercises</title>
 </head>
 <body>
 
-<h1>Index</h1>
+<h1>Index Exercises</h1>
 <p>This is a paragraph.</p>
 
 </body>
