--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <br><br>
 
-<a href style="color:Maroon;">https://www.w3chools.com This is a link</a>
+<a href style="color:Maroon;">https://www.w3chools.com</a>
 
 <br><br>
 
-<a href style="color:Cadetblue;">exercises/links.html Link Exercises</a>
+  <a href style="color:Cadetblue;"="/exercises/links">Exercises</a>
 
 <br><br> 
 
