--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
 <title>Index Exercises</title>
-</head>
-<body>
+  
+<body style="color:Beige;">
 
-<h1>Index Exercises</h1>
-<p>This is a paragraph.</p>
+<h1 style="color:Darkmagenta;">Index Exercises</h1>
+<p1 style="color:Chocolate;">These are my index exercises.</p>
 
+<a href="index.html">
+  <img src="images/home.png" alt="Exercises Home"
+       style="width:42px;height:42px;border:0;">
+  
 </body>
 </html>
