--- a/exercises/links.html
+++ b/exercises/links.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
 <title>Links Exercises</title>
-</head>
-<body>
+  
+<body style="color:Beige;">
 
-<h1>Links Exercises</h1>
-<p>This is a paragraph.</p>
+<h1 style="color:Darkmagenta;">Links Exercises</h1>
+<p1 style="color:Chocolate;">These are my link exercises.</p>
+  
 <a href="index.html">
   <img src="images/home.png" alt="Exercises Home"
        style="width:42px;height:42px;border:0;">
