--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>Index Exercises</title>
+<title>HTML Exercises</title>
   
 <body style="color:Beige;">
 
-<h1 style="color:Darkmagenta;">Index Exercises</h1>
-<p1 style="color:Chocolate;">These are my index exercises.</p>
+<h1 style="color:Darkmagenta;">HTML Exercises</h1>
+<p1 style="color:Chocolate;">These are my exercises.</p>
 
 <a href="index.html">
   <img src="images/home.png" alt="Exercises Home"
