--- a/exercises/index.html
+++ b/exercises/index.html
@@ -5,7 +5,8 @@
 <body style="color:Beige;">
 
 <h1 style="color:Darkmagenta;">HTML Exercises</h1>
-<p1 style="color:Chocolate;">These are my exercises.</p>
-
+<p1 style="color:Chocolate;">These are my HTML exercises.</p>
+  
+<a href style="color:Maroon;">="/exercises/links">Link Exercises</a>
 </body>
 </html>
