--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <br><br>
 
-<a href style="color:Cadetblue;"="/exercises/links">Exercises</a>
+<a href style="color:Cadetblue;"="/exercises/">Exercises</a>
 
 <br><br> 
 
