--- a/exercises/index.html
+++ b/exercises/index.html
@@ -7,6 +7,6 @@
 <h1 style="color:Darkmagenta;">HTML Exercises</h1>
 <p1 style="color:Chocolate;">These are my HTML exercises.</p>
   
-<a href style="color:Maroon;">="/exercises/links">Link Exercises</a>
+<a href style="color:Maroon;"="/exercises/links/">Link Exercises</a>
 </body>
 </html>
