--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
-<title>My ECS Github Page</title>
-  
+<title>Home Page</title>
 <body style="color:Beige;">
 
-#<img src=#
+<h1 style="color:Darkmagenta;">Home Page - phaml7773</h1>
+<p1 style="color:Chocolate;">Welcome to my home page!</p1>
 
-<h1 style="color:Darkmagenta;">My ECS Github Web Page</h1>
-<h2 style="color:Darkmagenta;">ECS - Fall 2017 - P1</h2>
-  
-<p1 style="color:Chocolate;">I love ECS!</p1>
+<br></br>
 
-<br><br>
+<h2 style="color:Maroon;">Subsite Links</h2>
+<a href style="color:Cadetblue;">https://www.w3chools.com</a>
 
-<a href style="color:Maroon;">https://www.w3chools.com</a>
-
-<br><br>
+<br></br>
 
 <a href style="color:Cadetblue;"="/exercises/">Exercises</a>
   
