--- a/exercises/links.html
+++ b/exercises/links.html
@@ -5,8 +5,9 @@
 <body style="color:Beige;">
 
 <a href="index.html">
-  <img src="images/home.png" alt="Exercises Home"
-       style="width:42px;height:42px;border:0;">
+  <img src="/images/home.png" alt="Exercises Home"
+       style="width:42px;height:42px;border:0;"> 
+</a>
   
 <h1 style="color:Darkmagenta;">Links Exercises</h1>
 <p1 style="color:Chocolate;">These are my link exercises.</p>
