--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <br></br>
 
-<a href style="color:Cadetblue;"="exercises.html">Exercises</a>
+<a href style="color:Cadetblue;"="/exercises/">Exercises</a>
   
 </body>
 </html>
