--- a/exercises/links.html
+++ b/exercises/links.html
@@ -5,7 +5,7 @@
 <body style="color:Beige;">
 
 <a href="index.html">
-  <img src="/images/home.png" alt="Exercises Home"
+  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
        style="width:42px;height:42px;border:0;"> 
 </a>
   
