--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -2,6 +2,11 @@
 <html>
 <body style="color:Beige;>
 
+<a href="index.html">
+  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
+       style="width:42px;height:42px;border:0;"> 
+</a>
+
 <h1 style="color:Darkmagenta;">Exercise 1</h1>
 <h2>London</h2>
 <p1>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p1>
