--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -2,6 +2,11 @@
 <html>
 <body style="color:Beige;>
 
+<a href="index.html">
+  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
+       style="width:42px;height:42px;border:0;"> 
+</a>
+
 <h1 style="color:Darkmagenta;">Exercise 1</h1>
 <p1>Hello World!</p1>
 
