--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html>
+<!DOCTYPE html>
+<html>
 <body style="color:Beige;>
 
 <a href="index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
        style="width:42px;height:42px;border:0;"> 
 </a>
-                                               
-<h1 style="color:Darkmagenta;">Exercise 1</h1>
-<p1 style="color:Chocolate;" title="About W3Schools">W3Schools is a web developer's site.</p1>
 
-<h1 style="color:Darkmagenta;">Exercise 2</h1>
+<h1 style="color:Darkmagenta;">Attributes Exercises</h1>
+
+<h2 style="color:Chocolate;">Exercise 1</h2>
+<p1 style="color:Maroon;" title="About W3Schools">W3Schools is a web developer's site.</p1>
+
+<h2 style="color:Chocolate;">Exercise 2</h2>
 <img src="w3schools.jpg" width="250" height="400">
 
-<h1 style="color:Darkmagenta;">Exercise 3</h1>
-<a href="https://www.w3schools.com">This is a link</a>
+<h2 style="color:Chocolate;">Exercise 3</h2>
+<a style="color:Maroon;" href="https://www.w3schools.com">This is a link</a>
 
-<h1 style="color:Darkmagenta;">Exercise 4</h1>
-<a href="http://www.wwf.org.uk">This is a link</a>
+<h2 style="color:Chocolate;">Exercise 4</h2>
+<a style="color:Maroon;" href="http://www.wwf.org.uk">This is a link</a>
 
-<h1 style="color:Darkmagenta;">Exercise 5</h1>
+<h2 style="color:Chocolate;">Exercise 5</h2>
 <img src="w3schooooools.jpg" alt="w3schools.com" width="135" height="50">
 
 </body>
 </html>
+
