--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -7,25 +7,30 @@
        style="width:42px;height:42px;border:0;"> 
 </a>
 
-<h1 style="color:Darkmagenta;">Exercise 1</h1>
-<h2>London</h2>
-<p1>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p1>
+<h1 style="color:Darkmagenta;">Attributes Exercises</h1>
+                              
+<h2 style="color:Chocolate;">Exercise 1</h2>
+<h3 style="color:Maroon;">London</h3>
+<p1 style="color:Cadetblue;">London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p1>
 
-<h3 style="color:Darkmagenta;">Exercise 2</h3>
-<h4>London</h4>
+<h2 style="color:Chocolate;">Exercise 2</h2>
+<h3 style="color:Maroon;">London</h3>
 <hr>
-<p2>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p2>
+<p1 style="color:Cadetblue;">London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p1>
 
-<h5 style="color:Darkmagenta;">Exercise 3</h5>
-<h6>Hello</h6>
-<h7>Hello</h7>
-<h8>Hello</h8>
-<h9>Hello</h9>
-<h10>Hello</h10>
-<h11>Hello</h11>
+<h2 style="color:Chocolate;">Exercise 3</h2>
+<h1 style="color:Maroon;">Hello</h1>
+<h2 style="color:Maroon;">Hello</h2>
+<h3 style="color:Maroon;">Hello</h3>
+<h4 style="color:Maroon;">Hello</h4>
+<h5 style="color:Maroon;">Hello</h5>
+<h6 style="color:Maroon;">Hello</h6>
 
-<h12 style="color:Darkmagenta;">Exercise 4</h12>
-<h13>Universal Studios Presents</h13>
-<h14>Jurassic Park</h14>
-<h15>About</h15>
-<p3>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p3>
+<h2 style="color:Chocolate;">Exercise 4</h2>
+<h3 style="color:Maroon;">Universal Studios Presents</h3>
+<h4 style="color:Cadetblue;">Jurassic Park</h14>
+<h5 style="color:Darkmagenta;">About</h5>
+<p1 style="color:Chocolate;">On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p3>
+
+</body>
+</html>
