--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -7,25 +7,27 @@
        style="width:42px;height:42px;border:0;"> 
 </a>
 
-<h1 style="color:Darkmagenta;">Exercise 1</h1>
-<p1>Hello World!</p1>
+<h1 style="color:Darkmagenta;">Attributes Exercises</h1>
+                              
+<h2 style="color:Chocolate;">Exercise 1</h2>
+<p1 style="color:Maroon;">Hello World!</p1>
 
-<h2 style="color:Darkmagenta;">Exercise 2</h2>
-<h3>This is a Heading
-<p2>This is a paragraph.
-<p3This is a paragraph.
-<p4>This is a paragraph.
+<h2 style="color:Chocolate;">Exercise 2</h2>
+<h3 style="color:Maroon;">This is a Heading</h3>
+<p1 style="color:Cadetblue;">This is a paragraph.</p1>
+<p1 style="color:Cadetblue;">This is a paragraph.</p1>
+<p1 style="color:Cadetblue;">This is a paragraph.</p1>
 
-<h3 style="color:Darkmagenta;">Exercise 3</h3>
-<p5>
+<h2 style="color:Chocolate;">Exercise 3</h2>
+<p1 style="color:Maroon;">
 My Bonnie lies over the ocean.<br>
 My Bonnie lies over the sea.<br>
 My Bonnie lies over the ocean.<br>
 Oh, bring back my Bonnie to me.
-</p5>
+</p1>
 
-<h4 style="color:Darkmagenta;">Exercise 4</h4>
-<p6>
+<h2 style="color:Chocolate;">Exercise 4</h2>
+<pre style="color:Maroon;">
 
    My Bonnie lies over the ocean.
 
@@ -35,4 +37,7 @@ Oh, bring back my Bonnie to me.
 
    Oh, bring back my Bonnie to me.
 
-</p6>
+</pre>
+                         
+</body>
+</html>
