--- a/exercises/comments.html
+++ b/exercises/comments.html
@@ -9,8 +9,12 @@
                               
 <h2 style="color:Chocolate;">Exercise 1</h2>
   <p1 style="color:Maroon;">This is a paragraph.</p1>
-
+  <br></br>
+                           
 <h2 style="color:Chocolate;">Exercise 2</h2>
   <p1 style="color:Maroon;">This is a paragraph.</p1>
   <!-- Do not display this text in the browser -->
   <p1 style="color:Maroon;">This is another paragraph.</p1>
+
+</body>
+</html>
