--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -7,7 +7,7 @@
        style="width:42px;height:42px;border:0;"> 
 </a>
 
-<h1 style="color:Darkmagenta;">Attributes Exercises</h1>
+<h1 style="color:Darkmagenta;">Headings Exercises</h1>
                               
 <h2 style="color:Chocolate;">Exercise 1</h2>
   <h3 style="color:Maroon;">London</h3>
