--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -7,7 +7,7 @@
        style="width:42px;height:42px;border:0;"> 
 </a>
 
-<h1 style="color:Darkmagenta;">Attributes Exercises</h1>
+<h1 style="color:Darkmagenta;">Paragraphs Exercises</h1>
                               
 <h2 style="color:Chocolate;">Exercise 1</h2>
   <p1 style="color:Maroon;">Hello World!</p1>
