--- a/exercises/index.html
+++ b/exercises/index.html
@@ -7,6 +7,10 @@
 <h1 style="color:Darkmagenta;">HTML Exercises</h1>
 <p1 style="color:Chocolate;">These are my HTML exercises.</p>
   
-<a href style="color:Maroon;"="/exercises/links/">Link Exercises</a>
+<a href style="color:Maroon;"="/exercises/attributes.html">Attributes Exercises</a>
+<a href style="color:Maroon;"="/exercises/headings.html">Headings Exercises</a>
+<a href style="color:Maroon;"="/exercises/paragraphs.html">Paragraphs Exercises</a>
+<a href style="color:Maroon;"="/exercises/styles.html">Styles Exercises</a>
+<a href style="color:Maroon;"="/exercises/formatting.html">Formatting Exercises</a>
 </body>
 </html>
