--- a/exercises/comments.html
+++ b/exercises/comments.html
@@ -5,7 +5,7 @@
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
        style="width:42px;height:42px;border:0;"> 
 </a>
-<h1 style="color:Darkmagenta;">Attributes Exercises</h1>
+<h1 style="color:Darkmagenta;">Comments Exercises</h1>
                               
 <h2 style="color:Chocolate;">Exercise 1</h2>
   <p1 style="color:Maroon;">This is a paragraph.</p1>
