--- a/exercises/index.html
+++ b/exercises/index.html
@@ -12,5 +12,7 @@
 <a href style="color:Maroon;"="/exercises/paragraphs.html">Paragraphs Exercises</a>
 <a href style="color:Maroon;"="/exercises/styles.html">Styles Exercises</a>
 <a href style="color:Maroon;"="/exercises/formatting.html">Formatting Exercises</a>
+<a href style="color:Maroon;"="/exercises/quotations.html">Quotations Exercises</a>
+<a href style="color:Maroon;"="/exercises/comments.html">Comments Exercises</a>
 </body>
 </html>
