--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <br></br>
 
 <h2 style="color:Maroon;">Subsite Links</h2>
-  <a href style="color:Cadetblue;">https://www.w3chools.com</a>
+  <a href style="color:Cadetblue;" ="https://www.w3chools.com">https://www.w3chools.com</a>
   <br></br>
-  <a href style="color:Cadetblue;"="/exercises/">Exercises</a>
+  <a href style="color:Cadetblue;" ="/exercises/">Exercises</a>
   
 </body>
 </html>
