--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h2 style="color:Maroon;">Subsite Links</h2>
   <a href style="color:Cadetblue;" ="https://www.w3chools.com">https://www.w3chools.com</a>
   <br></br>
-  <a href style="color:Cadetblue;" ="/exercises/">Exercises</a>
+  <a href style="color:Cadetblue;" ="/exercises">Exercises</a>
   
 </body>
 </html>
