--- a/exercises/index.html
+++ b/exercises/index.html
@@ -7,25 +7,25 @@
 <h1 style="color:Darkmagenta;">HTML Exercises</h1>
 <p1 style="color:Chocolate;">These are my HTML exercises.</p>
   
-<a href style="color:Maroon;"="/exercises/attributes.html">Attributes Exercises</a>
+<a href style="color:Maroon;" ="/exercises/attributes">Attributes Exercises</a>
   <br></br>
   
-<a href style="color:Maroon;"="/exercises/headings.html">Headings Exercises</a>
+<a href style="color:Maroon;" ="/exercises/headings">Headings Exercises</a>
   <br></br>
 
-<a href style="color:Maroon;"="/exercises/paragraphs.html">Paragraphs Exercises</a>
+<a href style="color:Maroon;" ="/exercises/paragraphs">Paragraphs Exercises</a>
   <br></br>
 
-<a href style="color:Maroon;"="/exercises/styles.html">Styles Exercises</a>
+<a href style="color:Maroon;" ="/exercises/styles">Styles Exercises</a>
   <br></br>
 
-<a href style="color:Maroon;"="/exercises/formatting.html">Formatting Exercises</a>
+<a href style="color:Maroon;" ="/exercises/formatting">Formatting Exercises</a>
   <br></br>
 
-<a href style="color:Maroon;"="/exercises/quotations.html">Quotations Exercises</a>
+<a href style="color:Maroon;" ="/exercises/quotations">Quotations Exercises</a>
   <br></br>
 
-<a href style="color:Maroon;"="/exercises/comments.html">Comments Exercises</a>
+<a href style="color:Maroon;" ="/exercises/comments">Comments Exercises</a>
   <br></br>
 
 </body>
