--- a/exercises/index.html
+++ b/exercises/index.html
@@ -7,25 +7,25 @@
 <h1 style="color:Darkmagenta;">HTML Exercises</h1>
 <p1 style="color:Chocolate;">These are my HTML exercises.</p>
   
-<a href="/exercises/attributes" style="color:Maroon;">Attributes Exercises</a>
+<a href="/exercises/attributes.html" style="color:Maroon;">Attributes Exercises</a>
   <br></br>
   
-<a href="/exercises/headings" style="color:Maroon;">Headings Exercises</a>
+<a href="/exercises/headings.html" style="color:Maroon;">Headings Exercises</a>
   <br></br>
 
-<a href="/exercises/paragraphs" style="color:Maroon;">Paragraphs Exercises</a>
+<a href="/exercises/paragraphs.html" style="color:Maroon;">Paragraphs Exercises</a>
   <br></br>
 
-<a href="/exercises/styles" style="color:Maroon;">Styles Exercises</a>
+<a href="/exercises/styles.html" style="color:Maroon;">Styles Exercises</a>
   <br></br>
 
-<a href="/exercises/formatting" style="color:Maroon;">Formatting Exercises</a>
+<a href="/exercises/formatting.html" style="color:Maroon;">Formatting Exercises</a>
   <br></br>
 
-<a href="/exercises/quotations" style="color:Maroon;">Quotations Exercises</a>
+<a href="/exercises/quotations.html" style="color:Maroon;">Quotations Exercises</a>
   <br></br>
 
-<a href="/exercises/comments" style="color:Maroon;">Comments Exercises</a>
+<a href="/exercises/comments.html" style="color:Maroon;">Comments Exercises</a>
   <br></br>
 
 </body>
