--- a/exercises/styles.html
+++ b/exercises/styles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body style="color:Beige;>
-<a href="index.html">
+<a href="/exercises/index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
        style="width:42px;height:42px;border:0;"> 
 </a>
