--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -2,7 +2,7 @@
 <html>
 <body style="color:Beige;>
 
-<a href="/exercises/index.html">
+<a href="index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
        style="width:42px;height:42px;border:0;"> 
 </a>
