--- a/exercises/index.html
+++ b/exercises/index.html
@@ -4,29 +4,19 @@
   
 <body style="color:Beige;">
 
+<a href="/index.html">Home Page</a>
+  
 <h1 style="color:Darkmagenta;">HTML Exercises</h1>
 <p1 style="color:Chocolate;">These are my HTML exercises.</p>
-  
-<a href="/exercises/attributes.html" style="color:Maroon;">Attributes Exercises</a>
-  <br></br>
-  
-<a href="/exercises/headings.html" style="color:Maroon;">Headings Exercises</a>
-  <br></br>
 
-<a href="/exercises/paragraphs.html" style="color:Maroon;">Paragraphs Exercises</a>
-  <br></br>
-
-<a href="/exercises/styles.html" style="color:Maroon;">Styles Exercises</a>
-  <br></br>
-
-<a href="/exercises/formatting.html" style="color:Maroon;">Formatting Exercises</a>
-  <br></br>
-
-<a href="/exercises/quotations.html" style="color:Maroon;">Quotations Exercises</a>
-  <br></br>
-
-<a href="/exercises/comments.html" style="color:Maroon;">Comments Exercises</a>
-  <br></br>
+<ul>
+  <li><a href="/exercises/attributes.html" style="color:Maroon;">Attributes Exercises</a></li>
+  <li><a href="/exercises/headings.html" style="color:Maroon;">Headings Exercises</a></li>
+  <li><a href="/exercises/styles.html" style="color:Maroon;">Styles Exercises</a></li>
+  <li><a href="/exercises/formatting.html" style="color:Maroon;">Formatting Exercises</a></li>
+  <li><a href="/exercises/quotations.html" style="color:Maroon;">Quotations Exercises</a></li>
+  <li><a href="/exercises/comments.html" style="color:Maroon;">Comments Exercises</a></li>
+</ul>
 
 </body>
 </html>
