--- a/exercises/index.html
+++ b/exercises/index.html
@@ -4,7 +4,7 @@
   
 <body style="color:Beige;">
 
-<a href="/index.html">Home Page</a>
+<a href="/index.html" style="color:Cadetblue;">Home Page</a>
   
 <h1 style="color:Darkmagenta;">HTML Exercises</h1>
 <p1 style="color:Chocolate;">These are my HTML exercises.</p>
