--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -2,9 +2,9 @@
 <html>
 <body style="color:Beige;>
 
-<a href="/exercises/index.html">
+<a href="index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
-       style="width:42px;height:42px;border:0;"> 
+  style="width:42px;height:42px;border:0;"> 
 </a>
 
 <h1 style="color:Darkmagenta;">Attributes Exercises</h1>
