--- a/exercises/links.html
+++ b/exercises/links.html
@@ -10,7 +10,22 @@
 </a>
   
 <h1 style="color:Darkmagenta;">Links Exercises</h1>
-<p1 style="color:Chocolate;">These are my link exercises.</p>
+ 
+<h2 style="color:Chocolate;">Exercise 1</h2>
+ <a href="https://www.w3schools.com" style="color:Maroon;">Visit our HTML tutorial.</a>
+  <br></br>
 
+<h2 style="color:Chocolate;">Exercise 2</h2>
+ <a href="html_images.asp">HTML Images</a>
+ 
+<h2 style="color:Chocolate;">Exercise 3</h2>
+ <a href="html_images.asp" target="_blank">HTML Images</a>
+ 
+<h2 style="color:Chocolate;">Exercise 4</h2> 
+ <a href="html_images.asp" target="_blank" style="text-decoration:none">HTML Images</a>
+ 
+<h2 style="color:Chocolate;">Exercise 5</h2>  
+ <img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
+ 
 </body>
 </html>
