--- a/exercises/index.html
+++ b/exercises/index.html
@@ -16,6 +16,12 @@
   <li><a href="/exercises/formatting.html" style="color:Maroon;">Formatting Exercises</a></li>
   <li><a href="/exercises/quotations.html" style="color:Maroon;">Quotations Exercises</a></li>
   <li><a href="/exercises/comments.html" style="color:Maroon;">Comments Exercises</a></li>
+  <li><a href="/exercises/colors.html" style="color:Maroon;">Colors Examples</a></li>
+  <li><a href="/exercises/links.html" style="color:Maroon;">Links Exercises</a></li>
+  <li><a href="/exercises/images.html" style="color:Maroon;">Images Exercises</a></li>
+  <li><a href="/exercises/tables.html" style="color:Maroon;">Tables Exercises</a></li>
+  <li><a href="/exercises/lists.html" style="color:Maroon;">Lists Exercises</a></li>
+  <li><a href="/exercises/blocks.html" style="color:Maroon;">Blocks Examples</a></li>
 </ul>
 
 </body>
