--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <br></br>
 
 <h2 style="color:Maroon;">Subsite Links</h2>
-  <a href="https://www.w3chools.com" style="color:Cadetblue;">https://www.w3chools.com</a>
-  <br></br>
-  <a href="/exercises" style="color:Cadetblue;">Exercises</a>
+<ul>
+  <li><a href="https://www.w3chools.com" style="color:Cadetblue;">https://www.w3chools.com</a></li>
+  <li><a href="/exercises" style="color:Cadetblue;">Exercises</a></li>
+</ul>
   
 </body>
 </html>
