--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <br></br>
 
 <h2 style="color:Maroon;">Subsite Links</h2>
-<ul>
+<ul style="color:Cadetblue;">
   <li><a href="https://www.w3chools.com" style="color:Cadetblue;">https://www.w3chools.com</a></li>
   <li><a href="/exercises" style="color:Cadetblue;">Exercises</a></li>
 </ul>
