--- a/exercises/blocks.html
+++ b/exercises/blocks.html
@@ -10,25 +10,25 @@
 <h1 style="color:Darkmagenta;">Blocks Examples</h1>
 
 <h2 style="color:Chocolate;">Example 1</h2>
-  <div>Hello</div>
-  <div>World</div>
+  <div style="color:Maroon;">Hello</div>
+  <div style="color:Maroon;">World</div>
   <br></br>
   
 
 <h2 style="color:Chocolate;">Example 2</h2>
-  <span>Hello</span>
-  <span>World</span>
+  <span style="color:Maroon;">Hello</span>
+  <span style="color:Maroon;">World</span>
   <br></br>
   
 <h2 style="color:Chocolate;">Example 3</h2> 
   <div style="background-color:black;color:white;padding:20px;">
-  <h3>London</h3>
-    <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  <h3 style="color:Maroon;">London</h3>
+    <p style="color:Cadetblue;">London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
   </div>
   <br></br>
   
 <h2 style="color:Chocolate;">Example 4</h2> 
-  <h3>My <span style="color:red">Important</span> Heading</h3>
+  <h3 style="color:Maroon;">My <span style="color:red">Important</span> Heading</h3>
 
 </body>
 </html>
