--- a/exercises/colors.html
+++ b/exercises/colors.html
@@ -20,9 +20,9 @@
   <p style="color:MediumSeaGreen;">Ut wisi enim...</p>
   
 <h2 style="color:Chocolate;">Example 3</h2> 
-  <h3 style="border:2px solid Tomato;">Hello World</h3>
-  <h3 style="border:2px solid DodgerBlue;">Hello World</h3>
-  <h3 style="border:2px solid Violet;">Hello World</h3>
+  <h3 style="color: Maroon; border:2px solid Tomato;">Hello World</h3>
+  <h3 style="color: Maroon; border:2px solid DodgerBlue;">Hello World</h3>
+  <h3 style="color: Maroon; border:2px solid Violet;">Hello World</h3>
   
 </body>
 </html>  
