--- a/exercises/images.html
+++ b/exercises/images.html
@@ -27,7 +27,7 @@
   <br></br>
   
 <h2 style="color:Chocolate;">Exercise 4</h2>  
-  <p1>
+  <p1 style="color:Maroon;">
   <img src="smiley.gif" alt="Smiley face"
   style="float:left;width:42px;height:42px">
   A paragraph with an image. A paragraph with an image.
@@ -41,7 +41,7 @@
   <br></br>
                                                                
  <h2 style="color:Chocolate;">Exercise 6</h2>  
-  <img src="w3schooooools.jpg" alt="W3Schools.com" width="135" height="50">
+  <img src="w3schooooools.jpg" alt="W3Schools.com" style="color:Maroon;" width="135" height="50">
   
 </body>
 </html>
