--- a/exercises/links.html
+++ b/exercises/links.html
@@ -16,15 +16,15 @@
  <br></br>
 
 <h2 style="color:Chocolate;">Exercise 2</h2>
- <a href="html_images.asp">HTML Images</a>
+ <a href="html_images.asp" style="color:Maroon;">HTML Images</a>
  <br></br>
 
 <h2 style="color:Chocolate;">Exercise 3</h2>
- <a href="html_images.asp" target="_blank">HTML Images</a>
+ <a href="html_images.asp" style="color:Maroon;" target="_blank">HTML Images</a>
  <br></br>
 
 <h2 style="color:Chocolate;">Exercise 4</h2> 
- <a href="html_images.asp" target="_blank" style="text-decoration:none">HTML Images</a>
+ <a href="html_images.asp" style="color:Maroon;" target="_blank" style="text-decoration:none">HTML Images</a>
  <br></br>
 
 <h2 style="color:Chocolate;">Exercise 5</h2>  
