--- a/exercises/lists.html
+++ b/exercises/lists.html
@@ -10,13 +10,13 @@
 <h1 style="color:Darkmagenta;">Lists Exercises</h1>
 
 <h2 style="color:Chocolate;">Exercise 1</h2>
-  <ul>
+  <ul style="color:Maroon;">
     <li>Coffee</li>
   </ul>
   <br></br>
   
 <h2 style="color:Chocolate;">Exercise 2</h2> 
-  <ol>
+  <ol style="color:Maroon;">
     <li>Coffee</li>
     <li>Tea</li>
     <li>Milk</li>
@@ -24,7 +24,7 @@
   <br></br>
   
 <h2 style="color:Chocolate;">Exercise 3</h2>
-  <ul style="list-style-type:square">
+  <ul style="color:Maroon; list-style-type:square">
     <li>Coffee</li>
     <li>Tea</li>
     <li>Milk</li>
@@ -32,7 +32,7 @@
   <br></br>
   
 <h2 style="color:Chocolate;">Exercise 4</h2>  
-  <ol type="A">
+  <ol type="A" style="color:Maroon;">
     <li>Coffee</li>
     <li>Tea</li>
     <li>Milk</li>
@@ -40,7 +40,7 @@
   <br></br>
   
 <h2 style="color:Chocolate;">Exercise 5</h2>  
-  <dl>
+  <dl style="color:Maroon;">
     <dt>Coffee</dt>
     <dd>- black hot drink</dd>
     <dt>Milk</dt>
@@ -48,19 +48,10 @@
   </dl>
   <br></br>
   
-<h2 style="color:Chocolate;">Exercise 6</h2>  
-  ul#menu {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;}
-
-  ul#menu li {
-    float:left;}
-  </style>
-  </head>
+<h2 style="color:Chocolate;">Exercise 6</h2> 
   <body>
 
-  <ul id="menu">
+  <ul id="menu" style="color:Maroon;">
   <li>Apples</li>
   <li>Bananas</li>
   <li>Lemons</li>
