--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -25,7 +25,7 @@
    <br></br>
                                                        
 <h2 style="color:Chocolate;">Exercise 5</h2>
-  <img src="w3schooooools.jpg" alt="w3schools.com" width="135" height="50">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/W3Schools_logo.png" alt="w3schools.com" width="135" height="50">
 
 </body>
 </html>
