--- a/exercises/styles.html
+++ b/exercises/styles.html
@@ -38,7 +38,7 @@
   <h3 style="color:Maroon;">This is a heading</h3>
   <h4 style="color:Cadetblue;">This is also a heading</h4>
   <p1 style="color:Darkmagenta;">This is a paragraph.</p1>
-  <p1 style="color:Darkmagenta;">This is also paragraph.</p1>
+  <p1 style="color:Darkmagenta;">This is also a paragraph.</p1>
   </body2>
 
  </body>
