--- a/exercises/styles.html
+++ b/exercises/styles.html
@@ -16,10 +16,10 @@
   <p1 style="color:Maroon; font-family:courier;">This is a paragraph.</p1>
   <br></br>
 
-<!--Text align-->
-
 <h2 style="color:Chocolate;">Exercise 3</h2>
-  <p1 style="color:Maroon; text-align:center;">This is a paragraph.</p1>
+  <div style="text-align:center;">
+  <p1 style="color:Maroon;">This is a paragraph.</p1>
+  </div>
   <br></br>
                                                
 <h2 style="color:Chocolate;">Exercise 4</h2>
@@ -34,11 +34,13 @@
   <br></br>
                               
 <h2 style="color:Chocolate;">Exercise 6</h2>
-  <body2 style="text-align:center">
+  <body2>
+   <div style="text-align:center;">
   <h3 style="color:Maroon;">This is a heading</h3>
   <h4 style="color:Cadetblue;">This is also a heading</h4>
   <p1 style="color:Darkmagenta;">This is a paragraph.</p1>
   <p1 style="color:Darkmagenta;">This is also a paragraph.</p1>
+  </div>
   </body2>
 
  </body>
