--- a/exercises/links.html
+++ b/exercises/links.html
@@ -2,7 +2,7 @@
 <html>
 <title>Links Exercises</title>
  
-<body style="color:Beige;">
+<body>
 
 <a href="index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
@@ -28,7 +28,9 @@
  <br></br>
 
 <h2 style="color:Chocolate;">Exercise 5</h2>  
+ <div style="color:Maroon;"
  <img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
- 
+ </div>
+
 </body>
 </html>
