--- a/exercises/images.html
+++ b/exercises/images.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="color:Beige;>
+<body>
 
 <a href="index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
@@ -10,6 +10,7 @@
 <h1 style="color:Darkmagenta;">Images Exercises</h1>
 
 <h2 style="color:Chocolate;">Exercise 1</h2>
+  <div style="color:Maroon;">
   <img src="programming.gif" alt="Computer Man"
   width="96" height="96">
   <br></br>
@@ -42,6 +43,7 @@
                                                                
  <h2 style="color:Chocolate;">Exercise 6</h2>  
   <img src="w3schooooools.jpg" alt="W3Schools.com" style="color:Maroon;" width="135" height="50">
-  
+  </div>
+
 </body>
 </html>
