--- a/css-exercises/selectors.html
+++ b/css-exercises/selectors.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+  
+  <h1>CSS Example</h1>
+  <p>My CSS Examples</p>
+  
+  <h1 id="id1">Heading</h1>
+  <p id="id1">Paragraph.</p>
+  <p id="id2">Paragraph.</p>
+  
+  <h1 class="bluev">Headings</h1>
+  <p class="bluev">Paragraph.</p>
+  <p class="center">Paragraph.</p>
+  
+  <div class="bluev">
+    <h1>Heading</h1>
+    <p>Paragraph.</p>
+  </div>
+  
+  </body>
+</html>
