--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <h2 style="color:Maroon;">Subsite Links</h2>
 <ul style="color:Cadetblue;">
   <li><a href="https://www.w3chools.com" style="color:Cadetblue;">https://www.w3chools.com</a></li>
-  <li><a href="/exercises" style="color:Cadetblue;">Exercises</a></li>
+  <li><a href="/exercises" style="color:Cadetblue;">HTML Exercises</a></li>
+  <li><a href="/css-exercises" style="color:Cadetblue;">CSS Exercises</a></li>
 </ul>
   
 </body>
