--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -13,5 +13,8 @@
   <h1>CSS Example</h1>
   <p>My CSS Examples</p>
   
+  <a href="/css-exercises/styles.css">Styles</a>
+  <a href="css-exercises/selectors.html">Selectors</a>
+  
   </body>
 </html>
