--- a/css-exercises/selectors.html
+++ b/css-exercises/selectors.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="styles.css" rel="stylesheet" type="text/css" />
+    <a href="index.html"><CSS Exercises Home</a>
   </head>
   <body>
   
