--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -14,7 +14,8 @@
   <p>My CSS Examples</p>
   
   <a href="/css-exercises/styles.css">Styles</a>
-  <a href="css-exercises/selectors.html">Selectors</a>
+  <br></br>
+  <a href="/css-exercises/selectors.html">Selectors</a>
   
   </body>
 </html>
