--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <h2 style="color:Maroon;">Subsite Links</h2>
 <ul style="color:Cadetblue;">
-  <li><a href="https://www.w3chools.com" style="color:Cadetblue;">https://www.w3chools.com</a></li>
+  <li><a href="https://www.w3schools.com" style="color:Cadetblue;">https://www.w3schools.com</a></li>
   <li><a href="/exercises" style="color:Cadetblue;">HTML Exercises</a></li>
   <li><a href="/css-exercises" style="color:Cadetblue;">CSS Exercises</a></li>
 </ul>
