--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <li><a href="https://www.w3schools.com" style="color:Cadetblue;">https://www.w3schools.com</a></li>
   <li><a href="/exercises" style="color:Cadetblue;">HTML Exercises</a></li>
   <li><a href="/css-exercises" style="color:Cadetblue;">CSS Exercises</a></li>
+  <li><a href="/html-reference.html" style="color:Cadetblue;">HTML Reference Page</a></li>
 </ul>
   
 </body>
