--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>CSS Exercises</title>
+  <link href="styles.css" rel="stylesheet" type="text/css">
+</head>
   
+<body>
   <a href="/index.html">Home Page</a>
-    
-  <h1>CSS Example</h1>
-  <p>My CSS Examples</p>
+  <h1>CSS Exercises</h1>
+  <p1>These are my CSS exercises.</p>
   
-  <a href="/css-exercises/styles.css">Styles</a>
-  <br></br>
-  <a href="/css-exercises/selectors.html">Selectors</a>
+  <ul>
+  <li><a href="/css-exercises/styles.css">Styles</a>
+  <li><a href="/css-exercises/selectors.html">Selectors</a>
+  </ul>
   
-  </body>
+</body>
 </html>
