--- a/html-reference.html
+++ b/html-reference.html
@@ -72,7 +72,7 @@
         <td>&lt;br&gt;</td>
         <td></td>
         <td>&lt;<i>br</i>&gt;</td>
-        <td><a href="https://www.w3schools.com/html/html_elements">Breaks</a></td>
+        <td><a href="https://www.w3schools.com/html/html_elements.asp">Breaks</a></td>
       </tr>
       
       <tr>
