--- a/html-reference.html
+++ b/html-reference.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>repl.it</title>
+  <title>HTML Reference Page</title>
   <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    
+  <a href="/index.html">Home Page</a>  
   <h1>HTML Reference Page</h1>
     
   <table>
