--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -13,8 +13,9 @@
   <p1>These are my CSS exercises.</p>
   
   <ul>
-  <li><a href="/css-exercises/styles.css">Styles</a>
-  <li><a href="/css-exercises/selectors.html">Selectors</a>
+  <!-- <li><a href="/css-exercises/styles.css">Styles</a>
+  <li><a href="/css-exercises/selectors.html">Selectors</a> -->
+    <li><a href="/css-exercises/setupandselectors.html">Setup and Selectors</a>
   </ul>
   
 </body>
