--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <title>Home Page</title>
-<body style="color:Beige;">
+<body>
 
-<h1 style="color:Darkmagenta;">Home Page - phaml7773</h1>
-<p1 style="color:Chocolate;">Welcome to my home page!</p1>
+<h1>Home Page - phaml7773</h1>
+<p1>Welcome to my home page!</p1>
 <hr>
 
-<h2 style="color:Maroon;">Subsite Links</h2>
-<ul style="color:Cadetblue;">
-  <li><a href="https://www.w3schools.com" style="color:Cadetblue;">https://www.w3schools.com</a></li>
-  <li><a href="/exercises" style="color:Cadetblue;">HTML Exercises</a></li>
-  <li><a href="/css-exercises" style="color:Cadetblue;">CSS Exercises</a></li>
-  <li><a href="/html-reference.html" style="color:Cadetblue;">HTML Reference Page</a></li>
+<h2>Subsite Links</h2>
+<ul>
+  <li><a href="https://www.w3schools.com">https://www.w3schools.com</a></li>
+  <li><a href="/exercises">HTML Exercises</a></li>
+  <li><a href="/css-exercises">CSS Exercises</a></li>
+  <li><a href="/html-reference.html">HTML Reference Page</a></li>
 </ul>
   
 </body>
