--- a/exercises/blocks.html
+++ b/exercises/blocks.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
-<body style="color:Beige;>
+<body>
 
 <a href="index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
   style="width:42px;height:42px;border:0;"> 
 </a>
 
-<h1 style="color:Darkmagenta;">Blocks Examples</h1>
+<h1>Blocks Examples</h1>
 
-<h2 style="color:Chocolate;">Example 1</h2>
-  <div style="color:Maroon;">Hello</div>
-  <div style="color:Maroon;">World</div>
+<h2>Example 1</h2>
+  <div>Hello</div>
+  <div>World</div>
   <br>
   
 
-<h2 style="color:Chocolate;">Example 2</h2>
-  <span style="color:Maroon;">Hello</span>
-  <span style="color:Maroon;">World</span>
+<h2>Example 2</h2>
+  <span>Hello</span>
+  <span>World</span>
   <br>
   
-<h2 style="color:Chocolate;">Example 3</h2> 
+<h2>Example 3</h2> 
   <div style="background-color:black;color:white;padding:20px;">
-  <h3 style="color:Maroon;">London</h3>
-    <p style="color:Cadetblue;">London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  <h3>London</h3>
+    <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
   </div>
   <br>
   
-<h2 style="color:Chocolate;">Example 4</h2> 
-  <h3 style="color:Maroon;">My <span style="color:red">Important</span> Heading</h3>
+<h2>Example 4</h2> 
+  <h3>My <span style="color:red">Important</span> Heading</h3>
 
 </body>
 </html>
