--- a/exercises/colors.html
+++ b/exercises/colors.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
-<body style="color:Beige;>
+<body>
 
 <a href="index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
   style="width:42px;height:42px;border:0;"> 
 </a>
 
-<h1 style="color:Darkmagenta;">Colors Examples</h1>
+<h1>Colors Examples</h1>
 
-<h2 style="color:Chocolate;">Example 1</h2>
+<h2>Example 1</h2>
   <h3 style="background-color:DodgerBlue;">Hello World</h3>
   <p style="background-color:Tomato;">Lorem ipsum...</p>
   <br>
   
-<h2 style="color:Chocolate;">Example 2</h2>
+<h2>Example 2</h2>
   <h3 style="color:Tomato;">Hello World</h3>
   <p style="color:DodgerBlue;">Lorem ipsum...</p>
   <p style="color:MediumSeaGreen;">Ut wisi enim...</p>
   <br>                                
   
-<h2 style="color:Chocolate;">Example 3</h2> 
-  <h3 style="color: Maroon; border:2px solid Tomato;">Hello World</h3>
-  <h3 style="color: Maroon; border:2px solid DodgerBlue;">Hello World</h3>
-  <h3 style="color: Maroon; border:2px solid Violet;">Hello World</h3>
+<h2>Example 3</h2> 
+  <h3 style="border:2px solid Tomato;">Hello World</h3>
+  <h3 style="border:2px solid DodgerBlue;">Hello World</h3>
+  <h3 style="border:2px solid Violet;">Hello World</h3>
   
 </body>
 </html>  
