--- a/exercises/images.html
+++ b/exercises/images.html
@@ -7,28 +7,28 @@
   style="width:42px;height:42px;border:0;"> 
 </a>
 
-<h1 style="color:Darkmagenta;">Images Exercises</h1>
+<h1>Images Exercises</h1>
 
-<h2 style="color:Chocolate;">Exercise 1</h2>
-  <div style="color:Maroon;">
+<h2>Exercise 1</h2>
+  <div>
   <img src="programming.gif" alt="Computer Man"
   width="96" height="96">
   <br>
   
-<h2 style="color:Chocolate;">Exercise 2</h2>
+<h2>Exercise 2</h2>
   <img src="html5.gif" alt="HTML5 Icon"
   style="width:256px;height:256px">
   <br>
   
-<h2 style="color:Chocolate;">Exercise 3</h2>
+<h2>Exercise 3</h2>
   <a href="https://www.w3schools.com">
   <img src="smiley.gif" alt="HTML tutorial"
   style="width:42px;height:42px">
   </a>
   <br>
   
-<h2 style="color:Chocolate;">Exercise 4</h2>  
-  <p1 style="color:Maroon;">
+<h2>Exercise 4</h2>  
+  <p1>
   <img src="smiley.gif" alt="Smiley face"
   style="float:left;width:42px;height:42px">
   A paragraph with an image. A paragraph with an image.
@@ -37,11 +37,11 @@
   </p1>
   <br>
                                            
- <h2 style="color:Chocolate;">Exercise 5</h2>
+ <h2>Exercise 5</h2>
   <img src="pic_mountain.jpg" style="width:304px;height:228px;">
   <br>
                                                                
- <h2 style="color:Chocolate;">Exercise 6</h2>  
+ <h2>Exercise 6</h2>  
   <img src="w3schooooools.jpg" alt="W3Schools.com" style="color:Maroon;" width="135" height="50">
   </div>
 
