--- a/exercises/images.html
+++ b/exercises/images.html
@@ -42,7 +42,7 @@
   <br>
                                                                
  <h2>Exercise 6</h2>  
-  <img src="w3schooooools.jpg" alt="W3Schools.com" style="color:Maroon;" width="135" height="50">
+  <img src="w3schooooools.jpg" alt="W3Schools.com" width="135" height="50">
   </div>
 
 </body>
