--- a/exercises/index.html
+++ b/exercises/index.html
@@ -2,26 +2,26 @@
 <html>
 <title>HTML Exercises</title>
   
-<body style="color:Beige;">
+<body>
 
-<a href="/index.html" style="color:Cadetblue;">Home Page</a>
+<a href="/index.html">Home Page</a>
   
-<h1 style="color:Darkmagenta;">HTML Exercises</h1>
-<p1 style="color:Chocolate;">These are my HTML exercises.</p>
+<h1>HTML Exercises</h1>
+<p1>These are my HTML exercises.</p>
 
 <ul>
-  <li><a href="/exercises/attributes.html" style="color:Maroon;">Attributes Exercises</a></li>
-  <li><a href="/exercises/headings.html" style="color:Maroon;">Headings Exercises</a></li>
-  <li><a href="/exercises/styles.html" style="color:Maroon;">Styles Exercises</a></li>
-  <li><a href="/exercises/formatting.html" style="color:Maroon;">Formatting Exercises</a></li>
-  <li><a href="/exercises/quotations.html" style="color:Maroon;">Quotations Exercises</a></li>
-  <li><a href="/exercises/comments.html" style="color:Maroon;">Comments Exercises</a></li>
-  <li><a href="/exercises/colors.html" style="color:Maroon;">Colors Examples</a></li>
-  <li><a href="/exercises/links.html" style="color:Maroon;">Links Exercises</a></li>
-  <li><a href="/exercises/images.html" style="color:Maroon;">Images Exercises</a></li>
-  <li><a href="/exercises/tables.html" style="color:Maroon;">Tables Exercises</a></li>
-  <li><a href="/exercises/lists.html" style="color:Maroon;">Lists Exercises</a></li>
-  <li><a href="/exercises/blocks.html" style="color:Maroon;">Blocks Examples</a></li>
+  <li><a href="/exercises/attributes.html">Attributes Exercises</a></li>
+  <li><a href="/exercises/headings.html">Headings Exercises</a></li>
+  <li><a href="/exercises/styles.html">Styles Exercises</a></li>
+  <li><a href="/exercises/formatting.html">Formatting Exercises</a></li>
+  <li><a href="/exercises/quotations.html">Quotations Exercises</a></li>
+  <li><a href="/exercises/comments.html">Comments Exercises</a></li>
+  <li><a href="/exercises/colors.html">Colors Examples</a></li>
+  <li><a href="/exercises/links.html">Links Exercises</a></li>
+  <li><a href="/exercises/images.html">Images Exercises</a></li>
+  <li><a href="/exercises/tables.html">Tables Exercises</a></li>
+  <li><a href="/exercises/lists.html">Lists Exercises</a></li>
+  <li><a href="/exercises/blocks.html">Blocks Examples</a></li>
 </ul>
 
 </body>
