--- a/exercises/links.html
+++ b/exercises/links.html
@@ -9,26 +9,26 @@
        style="width:42px;height:42px;border:0;"> 
 </a>
   
-<h1 style="color:Darkmagenta;">Links Exercises</h1>
+<h1>Links Exercises</h1>
  
-<h2 style="color:Chocolate;">Exercise 1</h2>
- <a href="https://www.w3schools.com" style="color:Maroon;">Visit our HTML tutorial.</a>
- <br></br>
+<h2>Exercise 1</h2>
+ <a href="https://www.w3schools.com">Visit our HTML tutorial.</a>
+ <br>
 
-<h2 style="color:Chocolate;">Exercise 2</h2>
- <a href="html_images.asp" style="color:Maroon;">HTML Images</a>
- <br></br>
+<h2>Exercise 2</h2>
+ <a href="html_images.asp">HTML Images</a>
+ <br>
 
-<h2 style="color:Chocolate;">Exercise 3</h2>
- <a href="html_images.asp" style="color:Maroon;" target="_blank">HTML Images</a>
- <br></br>
+<h2>Exercise 3</h2>
+ <a href="html_images.asp" target="_blank">HTML Images</a>
+ <br>
 
-<h2 style="color:Chocolate;">Exercise 4</h2> 
- <a href="html_images.asp" style="color:Maroon;" target="_blank" style="text-decoration:none">HTML Images</a>
- <br></br>
+<h2>Exercise 4</h2> 
+ <a href="html_images.asp" target="_blank" style="text-decoration:none">HTML Images</a>
+ <br>
 
-<h2 style="color:Chocolate;">Exercise 5</h2>  
- <div style="color:Maroon;"
+<h2>Exercise 5</h2>  
+ <div>
  <img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
  </div>
 
