--- a/exercises/lists.html
+++ b/exercises/lists.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html>
-<body style="color:Beige;>
+<body>
 
 <a href="index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
   style="width:42px;height:42px;border:0;"> 
 </a>
 
-<h1 style="color:Darkmagenta;">Lists Exercises</h1>
+<h1>Lists Exercises</h1>
 
-<h2 style="color:Chocolate;">Exercise 1</h2>
-  <ul style="color:Maroon;">
+<h2>Exercise 1</h2>
+  <ul>
     <li>Coffee</li>
   </ul>
-  <br></br>
+  <br>
   
-<h2 style="color:Chocolate;">Exercise 2</h2> 
-  <ol style="color:Maroon;">
+<h2>Exercise 2</h2> 
+  <ol>
     <li>Coffee</li>
     <li>Tea</li>
     <li>Milk</li>
   </ol>
-  <br></br>
+  <br>
   
-<h2 style="color:Chocolate;">Exercise 3</h2>
-  <ul style="color:Maroon; list-style-type:square">
+<h2>Exercise 3</h2>
+  <ul style="list-style-type:square">
     <li>Coffee</li>
     <li>Tea</li>
     <li>Milk</li>
   </ul>
-  <br></br>
+  <br>
   
-<h2 style="color:Chocolate;">Exercise 4</h2>  
-  <ol type="A" style="color:Maroon;">
+<h2>Exercise 4</h2>  
+  <ol type="A">
     <li>Coffee</li>
     <li>Tea</li>
     <li>Milk</li>
   </ol>
-  <br></br>
+  <br>
   
-<h2 style="color:Chocolate;">Exercise 5</h2>  
-  <dl style="color:Maroon;">
+<h2>Exercise 5</h2>  
+  <dl>
     <dt>Coffee</dt>
     <dd>- black hot drink</dd>
     <dt>Milk</dt>
      <dd>- white cold drink</dd>
   </dl>
-  <br></br>
+  <br>
   
-<h2 style="color:Chocolate;">Exercise 6</h2> 
+<h2>Exercise 6</h2> 
   <body>
 
-  <ul id="menu" style="color:Maroon;">
+  <ul id="menu">
   <li>Apples</li>
   <li>Bananas</li>
   <li>Lemons</li>
