--- a/exercises/tables.html
+++ b/exercises/tables.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body style="color:Maroon;">
+<body>
 
 <a href="index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
   style="width:42px;height:42px;border:0;"> 
 </a>
 
-<h1 style="color:Darkmagenta;">Tables Exercises</h1>
+<h1>Tables Exercises</h1>
 
-<h2 style="color:Chocolate;">Exercise 1</h2>
+<h2>Exercise 1</h2>
 <style>
 table, th, td {
     border: 1px solid black;
@@ -39,9 +39,9 @@ th, td {
     <td>94</td>
   </tr>
 </table>
-<br></br>
+<br>
 
-<h2 style="color:Chocolate;">Exercise 2</h2>
+<h2>Exercise 2</h2>
 <style>
 table, th, td {
     border: 1px solid black;
@@ -72,9 +72,9 @@ th, td {
     <td>94</td>
   </tr>
 </table>
-<br></br>
+<br>
 
-<h2 style="color:Chocolate;">Exercise 3</h2>
+<h2>Exercise 3</h2>
 <style>
 table, th, td {
     border: 1px solid black;
@@ -106,11 +106,10 @@ th, td {
     <td>94</td>
   </tr>
 </table>
-<br></br>
+<br>
 
-<h2 style="color:Chocolate;">Exercise 4</h2>
-
-<!-- Red border applies to all tables
+<h2>Exercise 4</h2>
+<!-- Red border applies to all tables -->
 
 <style>
 table, th, td {
@@ -141,11 +140,9 @@ th, td {
     <td>94</td>
   </tr>
 </table> 
-<br></br>
+<br>
 
--->
-
-<h2 style="color:Chocolate;">Exercise 5</h2>
+<h2>Exercise 5</h2>
 <style>
 table, th, td {
     border: 1px solid black;
@@ -174,9 +171,11 @@ table, th, td {
     <td>94</td>
   </tr>
 </table>
-
-<h2 style="color:Chocolate;">Exercise 6</h2>
-<!--Black background applies to all tables>
+<br>
+  
+<h2>Exercise 6</h2>
+<!--Black background applies to all tables -->
+  
 <style>
 table, th, td {
     border: 1px solid black;
