--- a/html-reference.html
+++ b/html-reference.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>HTML Reference Page</title>
-  <link href="index.css" rel="stylesheet" type="text/css" />
+  <link href="html_ref.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     
