--- a/css-exercises/setupandselectors.html
+++ b/css-exercises/setupandselectors.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+
+  <a href="index.html">
+  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
+  style="width:42px;height:42px;border:0;"> 
+  </a>
+  
   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/explorer.jpeg" />
   <h1 class="title cursive capitalize" >Top Vacation Spots</h1>
   <h5>By: Stacy Gray</h5>
