--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -16,6 +16,7 @@
   <!-- <li><a href="/css-exercises/styles.css">Styles</a>
   <li><a href="/css-exercises/selectors.html">Selectors</a> -->
     <li><a href="/css-exercises/setupandselectors.html">Setup and Selectors</a>
+      <li><a href="/css-exercises/visualrules.html">Visual Rules</a>
   </ul>
   
 </body>
