--- a/css-exercises/visualrules.html
+++ b/css-exercises/visualrules.html
@@ -9,6 +9,11 @@
 
 <body>
 
+  <a href="index.html">
+  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
+  style="width:42px;height:42px;border:0;"> 
+  </a>
+  
   <div class="content">
     <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/unit-4/htmlcss1-img_writer-avatar.jpg" class="writer-img">
     <h3 class="byline">Article By: Jane Dover</h3>
