--- a/css-exercises/setupandselectors.html
+++ b/css-exercises/setupandselectors.html
@@ -8,7 +8,7 @@
 
 <body>
 
-  <a href="index.html">
+  <a href="/css-exercises/index.html">
   <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
   style="width:42px;height:42px;border:0;"> 
   </a> 
