--- a/css-exercises/theboxmodel.html
+++ b/css-exercises/theboxmodel.html
@@ -7,6 +7,12 @@
 </head>
 <body>
 
+  <a href="/css-exercises/index.html">
+  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
+  style="width:42px;height:42px;border:0;"> 
+  </a> 
+  <br>
+  
   <nav class="navigation">
     <ul>
       <li>LOCAL</li>
