--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -18,6 +18,8 @@
   <li><a href="/css-exercises/setupandselectors.html">Setup and Selectors</a>
   <li><a href="/css-exercises/visualrules.html">Visual Rules</a>
   <li><a href="/css-exercises/theboxmodel.html">The Box Model</a>
+  <li><a href="/css-exercises/changingtheboxmodel.html><Changing the Box Model</a>
+  <li><a href="/css-exercises/displayandpositioning.html><Display and Positioning</a>
   </ul>
   
 </body>
