--- a/html-reference.html
+++ b/html-reference.html
@@ -7,7 +7,10 @@
   <link href="html_ref.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    
+
+<a href="/index.html">Home Page</a>
+<br>
+  
   <h1>HTML Reference Page</h1>
     
   <table>
