--- a/project/index.html
+++ b/project/index.html
@@ -4,8 +4,8 @@
 <title>CSS Website Layout</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="website_layoutc3.css">
-<link rel="stylesheet" type="text/css" href="website_styles.css">
+<link rel="stylesheet" type="text/css" href="layoutc3.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
