--- a/css-exercises/displayandpositioning.html
+++ b/css-exercises/displayandpositioning.html
@@ -3,16 +3,10 @@
 <head>
   <title>Please Participate in Our Survey!</title>
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="displayandpositioning.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
-<a href="/css-exercises/index.html">
-  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
-  style="width:42px;height:42px;border:0;"> 
-  </a> 
-  <br>
-  
   <header>
     <ul>
       <li>Question 1</li>
@@ -25,7 +19,7 @@
   </header>
   
   <div class="welcome">
-    <h1>Welcome to our survey!</h1>
+    <h1><strong>Welcome</strong> to our survey!</h1>
     <p>We're looking forward to getting your answers so we can make sure our products and services are the best they can be!</p>
   </div>
 
@@ -113,6 +107,9 @@
       <h3>Agree</h3>
     </div>
   </div>
+  <footer>
+    <h3>Thanks for taking our survey!</h3>
+  </footer>
 
 </body>
 </html>
