--- a/css-exercises/displayandpositioning.html
+++ b/css-exercises/displayandpositioning.html
@@ -3,10 +3,16 @@
 <head>
   <title>Please Participate in Our Survey!</title>
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,700|Varela+Round" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="displayandpositioning.css">
 </head>
 <body>
 
+  <a href="/css-exercises/index.html">
+  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Exercises Home"
+  style="width:42px;height:42px;border:0;"> 
+  </a> 
+  <br>
+  
   <header>
     <ul>
       <li>Question 1</li>
