--- a/project/index.html
+++ b/project/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+<a href="/index.html">Home Page</a>
+  
 <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a href="recipes.html">Recipes</a>
