--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <li><a href="/exercises">HTML Exercises</a></li>
   <li><a href="/css-exercises">CSS Exercises</a></li>
   <li><a href="/html-reference.html">HTML Reference Page</a></li>
-  <li><a href="/project/index.html"><Website Project</a></li>
+  <li><a href="/project/index.html">Website Project</a></li>
 </ul>
   
 </body>
