--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="icon" href="download.png">
+<link rel="icon" href="favicon.ico">
 <title>Home Page</title>
 <body>
 
