--- a/responsive_images/static.html
+++ b/responsive_images/static.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<a href="index.html">
+  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Responsive Images Home"
+  style="width:42px;height:42px;border:0;"> 
+</a>
+
+<h1>Static Example</h1>
+
+  <img src="/images/image_large.jpg">
+  
+</body>
+</html>
 
