--- a/responsive_images/responsive.html
+++ b/responsive_images/responsive.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<a href="index.html">
+  <img src="http://wfarm2.dataknet.com/static/resources/icons/set52/ad752e7d.png" alt="Responsive Images Home"
+  style="width:42px;height:42px;border:0;"> 
+</a>
+
+<h1>Responsive Example</h1>
+
+  <img src="/images/image_small.jpg"
+        srcset="/images/image_large.jpg,
+                /images/image_original.jpg,
+                /images/image_medium.jpg,
+                /images/image_small.jpg">
+  
+</body>
+</html>
 
