--- a/responsive_images/responsive.html
+++ b/responsive_images/responsive.html
@@ -9,7 +9,7 @@
 
 <h1>Responsive Example</h1>
 
-  <img src="/images/image_small.jpg"
+  <img src="/images/image_original.jpg"
         srcset="/images/image_large.jpg,
                 /images/image_original.jpg,
                 /images/image_medium.jpg,
