--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <li><a href="/css-exercises">CSS Exercises</a></li>
   <li><a href="/html-reference.html">HTML Reference Page</a></li>
   <li><a href="/project/index.html">Website Project</a></li>
+  <li><a href="/responsive_images/index.html">Responsive Images</a></li>
 </ul>
   
 </body>
