--- a/responsive_images/responsive.html
+++ b/responsive_images/responsive.html
@@ -10,10 +10,10 @@
 <h1>Responsive Example</h1>
 
   <img src="/images/image_original.jpg"
-        srcset="/images/image_large.jpg,
-                /images/image_original.jpg,
-                /images/image_medium.jpg,
-                /images/image_small.jpg">
+        srcset="/images/image_large.jpg 4000w,
+                /images/image_original.jpg 3504w,
+                /images/image_medium.jpg 3000w,
+                /images/image_small.jpg 2000w">
   
 </body>
 </html>
